[package]
name = "google-assistant"
version = "0.1.0"
authors = ["Joel Winarske <joel.winarske@linux.com>"]
repository = "https://github.com/jwinarske/google-assistant-rs"
homepage = "https://github.com/jwinarske/google-assistant-rs"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.8"
gouth = { version = "0.1" }
tonic = { version = "0.3", features = ["tls"] }
prost = { version = "0.8" }
prost-types = { version = "0.8" }
tokio = { version = "1.8", features = ["time", "fs", "macros", "rt"] }
cpal = "0.13.1"
dasp_interpolate = { version = "0.11.0", features = ["sinc"] }
dasp_ring_buffer = "0.11.0"
dasp_sample = "0.11.0"
dasp_signal = "0.11.0"
# use dasp::{interpolate::sinc::Sinc, ring_buffer, signal, Sample, Signal};


[build-dependencies]
git2 = "0.16.1"
tonic-build = "0.3.1"
